# rsdbc

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  NOTICE.txt  README.md  REAME.md  RESEARCH.md  TODO.md
.github/workflows/: publish.yml
r2dbc/: Cargo.toml
r2dbc-cli/: Cargo.toml
r2dbc-core/: Cargo.toml
r2dbc-core/src/: connection.rs  error.rs  lib.rs
r2dbc-mysql/: Cargo.toml
r2dbc-mysql/src/: lib.rs
r2dbc-postgres/: Cargo.toml
r2dbc-postgres/src/: lib.rs
r2dbc-sqlite/: Cargo.toml
r2dbc-sqlite/src/: connection.rs  error.rs  lib.rs
r2dbc-sqlite/src/options/: auto_vacuum.rs  journal_mode.rs  locking_mode.rs  mod.rs  mode.rs  parse.rs  synchronous.rs
r2dbc/src/: lib.rs
rsdbc/: Cargo.toml
rsdbc-cli/: Cargo.toml
rsdbc-core/: Cargo.toml
rsdbc-core/src/: connection.rs  error.rs  lib.rs
rsdbc-mysql/: Cargo.toml
rsdbc-mysql/src/: lib.rs
rsdbc-postgres/: Cargo.toml
rsdbc-postgres/src/: lib.rs  ssl_mode.rs
rsdbc-sqlite/: Cargo.toml
rsdbc-sqlite/src/: connection.rs  error.rs  lib.rs
rsdbc-sqlite/src/options/: auto_vacuum.rs  journal_mode.rs  locking_mode.rs  mod.rs  parse.rs  synchronous.rs
rsdbc/src/: lib.rs
