[package]
name = "r2dbc-cli"
description = "Command line tool for querying R2DBC data sources"
version = "0.0.1"
authors = ["seancarroll"]
edition = "2018"
readme = "../README.md"
keywords = ["sql"]
categories = ["database"]
repository = "https://github.com/eventfully-engineered/r2dbc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2dbc = { path = "../r2dbc", version = "0.0.1" }
r2dbc-mysql = { path = "../r2dbc-mysql", version = "0.0.1" }
r2dbc-postgres = { path = "../r2dbc-postgres", version = "0.0.1" }
r2dbc-sqlite = { path = "../r2dbc-sqlite", version = "0.0.1" }
clap = "2.33.3"