[package]
name = "r2dbc-mysql"
description = " MySQL R2DBC Driver"
version = "0.0.1"
authors = ["seancarroll"]
edition = "2018"
readme = "../README.md"
keywords = ["sql", "mysql"]
categories = ["database"]
repository = "https://github.com/eventfully-engineered/r2dbc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2dbc = { path = "../r2dbc", version = "0.0.1" }
mysql = "20.1.0"
mysql_common = "0.26.0"
twox-hash = "1.6.0"
sqlparser = "0.9.0"