[package]
name = "r2dbc-mysql"
description = " MySQL R2DBC Driver"
version = "0.0.1"
authors = ["seancarroll"]
edition = "2021"
readme = "../README.md"
keywords = ["sql", "mysql"]
categories = ["database"]
repository = "https://github.com/eventfully-engineered/r2dbc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
mysql = "21.0.2"
mysql_common = "0.28.0"
r2dbc-core = { path = "../r2dbc-core", version = "0.0.1" }
sqlparser = "0.12.0"
twox-hash = "1.6.1"
url = { version = "2.2.2", default-features = false }
