[package]
name = "r2dbc-sqlite"
description = "SQLite R2DBC Driver"
version = "0.0.1"
authors = ["seancarroll"]
edition = "2018"
readme = "../README.md"
keywords = ["sql", "sqlite"]
categories = ["database"]
repository = "https://github.com/eventfully-engineered/r2dbc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2dbc = { path = "../r2dbc", version = "0.0.1" }

rusqlite = { version = "0.24.2", features = ["bundled"]}
fallible-streaming-iterator = "0.1.9"
