[package]
name = "r2dbc-sqlite"
description = "SQLite R2DBC Driver"
version = "0.0.1"
authors = ["seancarroll"]
edition = "2021"
readme = "../README.md"
keywords = ["sql", "sqlite"]
categories = ["database"]
repository = "https://github.com/eventfully-engineered/r2dbc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = { version = "0.3.18", default-features = false }
percent-encoding = "2.1.0"
r2dbc = { path = "../r2dbc", version = "0.0.1" }
r2dbc-core = { path = "../r2dbc-core", version = "0.0.1" }
rusqlite = { version = "0.26.3", features = ["bundled"]}
tracing = "0.1"
tracing-subscriber = "0.2"
url = { version = "2.2.2", default-features = false }
