[package]
name = "rsdbc-postgres"
description = "Postgres RSDBC Driver"
version = "0.0.1"
authors = ["seancarroll"]
edition = "2021"
readme = "../README.md"
keywords = ["sql", "postgresql"]
categories = ["database"]
repository = "https://github.com/eventfully-engineered/r2dbc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
native-tls = "0.2"
postgres = "0.19.2"
postgres-native-tls = "0.5.0"
tokio-postgres = { version = "0.7.2" }
rsdbc-core = { path = "../rsdbc-core", version = "0.0.1" }
sqlparser = "0.12.0"
thiserror = "1.0.29"
tokio = "1.15.0"
tracing = "0.1"
tracing-subscriber = "0.2"
url = { version = "2.2.2", default-features = false }
