[package]
name = "rsdbc-sqlite"
description = "SQLite RSDBC Driver"
version = "0.0.1"
authors = ["seancarroll"]
edition = "2021"
readme = "../README.md"
keywords = ["sql", "sqlite"]
categories = ["database"]
repository = "https://github.com/eventfully-engineered/rsdbc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
percent-encoding = "2.1.0"
rsdbc-core = { path = "../rsdbc-core", version = "0.0.1" }
rusqlite = { version = "0.26.3", features = ["bundled"]}
thiserror = "1.0.29"
tracing = "0.1"
tracing-subscriber = "0.2"
url = { version = "2.2.2", default-features = false }
