[package]
name = "rsdbc"
description = "Rust Relation Database Connectivity (RSDBC) API"
version = "0.0.1"
authors = ["seancarroll"]
edition = "2021"
readme = "../README.md"
keywords = ["sql"]
categories = ["database"]
repository = "https://github.com/eventfully-engineered/r2dbc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", default-features = false, features = [ "clock" ], optional = true }
futures = { version = "0.3" }
log = "0.4"
rsdbc-core = { path = "../rsdbc-core", version = "0.0.1" }
rsdbc-mysql = { path = "../rsdbc-mysql", version = "0.0.1" }
rsdbc-postgres = { path = "../rsdbc-postgres", version = "0.0.1" }
rsdbc-sqlite = { path = "../rsdbc-sqlite", version = "0.0.1" }
thiserror = "1.0.29"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2.2"
